[test] Add more tests for Teraheap